testdata/zkc/invalid/basic_invalid_01.zkc
;;error:2:15-16:variable already declared
fn f(u8 x, u8 x) -> (u8 r) {
  r = x
  return
}
